bootstrap dans le main page et quelque modification